--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content">
 
         <EditText
+            android:id="@+id/inputCards"
             android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
